Fix issue where video iframes were overlapping

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,11 +135,8 @@ a {
 
 #listen_content {
     position: relative;
-    border: solid;
-    border-color: White;
-    border-width: .5px;
-    /*text-align:center;
-    width: 40%;
+    text-align:center;
+    /*width: 40%;
     height: 400px;*/
 }
 
